# connect4

./: Cargo.toml  README.md  Web.toml
src/: engine.rs  html.rs  lib.rs  main.rs
src/engine/: minmax.rs  patterns.rs  test.rs
src/html/: config.rs  game.rs
static/: board.css
